crates/math-core/tests/snapshots/error_test__tag_with_non_number.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{align}x\\tag{A1}\\end{align}"
---
Error: Expected a number, got "A1".
   ╭─[ <input>:1:19 ]
   │
 1 │ \begin{align}x\tag{A1}\end{align}
   │                   ──┬─  
   │                     ╰─── expected a number here
───╯
